[tool.poetry]
name = "loongarch-simd"
version = "0.1.0"
description = ""
authors = ["Jiajie Chen <c@jia.je>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
mkdocs = "^1.5.3"
mkdocs-macros-plugin = "^1.0.5"
mkdocs-glightbox = "^0.5.2"
mkdocs-llmstxt = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
